--- a/package.json
+++ b/package.json
@@ -6,12 +6,25 @@
     "dev": "astro dev",
     "start": "astro dev",
     "build": "astro build",
+    "postbuild": "pagefind --source dist --bundle-dir pagefind",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/rss": "^2.1.0",
+    "@astrojs/sitemap": "^1.0.1",
+    "@astrojs/tailwind": "^5.0.2",
+    "@resvg/resvg-js": "^2.4.0",
+    "@tailwindcss/typography": "^0.5.9",
     "astro": "^3.0.12",
+    "astro-iconify": "^1.2.0",
     "astro-webmanifest": "^1.0.0",
-    "astrojs-service-worker": "^1.1.0"
+    "astrojs-service-worker": "^1.1.0",
+    "satori": "^0.3.1",
+    "satori-html": "^0.3.2",
+    "tailwindcss": "^3.3.3"
+  },
+  "devDependencies": {
+    "pagefind": "^0.10.7"
   }
 }
